2007-12-12  Satoshi Nakagawa <artension@gmail.com>

	Implemented theme for the member list.
	Changed to print operator marks and nick names separately in the member list.

2007-12-12  Satoshi Nakagawa <artension@gmail.com>

	Changed to set background color for log views to stop flickering in starting up.

2007-12-12  Satoshi Nakagawa <artension@gmail.com>

	Implemented theme for the server tree.

2007-12-12  Satoshi Nakagawa <artension@gmail.com>

	Improved encoding choices.
	Fixed a bug of a NSColor utility method.

2007-12-10  Satoshi Nakagawa <artension@gmail.com>

	Added NSColor utilities.
	Removed UnitNameCell.
	Refactoring.

2007-12-10  Satoshi Nakagawa <artension@gmail.com>

	Fixed a string format for CTCP ping time.

2007-12-10  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, 3 column layout should be applied on starting up.

2007-12-10  Satoshi Nakagawa <artension@gmail.com>

	Added the "Spring Night" theme.
	Changed to use the default font when failed to create a font.
	Changed to set an insertion point color for the input text field.
	Tweaked log view styles.

2007-12-10  Satoshi Nakagawa <artension@gmail.com>

	Added a theme support for the input text field.
	Tweaked the default css for log views.

2007-12-08  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, pasting multi line text to the input text field caused an exception.

2007-12-07  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, a definition of IRC::ADDRESS_LEN was missing.

2007-12-07  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, NaN should be treated as 0 in LogController#viewing_bottom?.

2007-12-07  Satoshi Nakagawa <artension@gmail.com>

	Set break-word: break-all for addresses.

2007-12-07  Satoshi Nakagawa <artension@gmail.com>

	Changed the theme path to ~/Library/LimeChat/Theme.

2007-12-07  Satoshi Nakagawa <artension@gmail.com>

	Changed to set ENV['HOME'] at starting up.

2007-12-07  Satoshi Nakagawa <artension@gmail.com>
