@@ -2,7 +2,7 @@
 # You can redistribute it and/or modify it under the Ruby's license or the GPL2.
 
 class User
-  attr_accessor :nick, :username, :address, :o, :v
+  attr_accessor :nick, :username, :address, :o, :h, :v
   attr_reader :incoming_weight, :outgoing_weight
   
   def initialize(nick, *args)
@@ -13,16 +13,23 @@ class User
     @username = args[0] || ''
     @address = args[1] || ''
     @o = args[2] || false
-    @v = args[3] || false
+    @h = args[3] || false
+    @v = args[4] || false
   end
   
   def to_s
     mark + @nick
   end
   
+  def self.marks
+    ['@', '%', '+']
+  end
+  
   def mark
     if @o
       '@'
+    elsif @h
+      '%'
     elsif @v
       '+'
     else
